# insightface-ncnn-android

./: ._gradle.properties  README.md  build.gradle  gradle.properties  settings.gradle
FaceRecognition/: settings.gradle
FaceRecognition/app/: CMakeLists.txt  build.gradle
FaceRecognition/app/src/androidTest/java/com/wisesoft/wiseface/: ExampleInstrumentedTest.java
FaceRecognition/app/src/main/cpp/src/: cJSON.h  detector.cpp  face_align.hpp  native-lib.cpp  recognizer.cpp  recognizer.h  utils.cpp  utils.h  wiseface.id.h
FaceRecognition/app/src/main/java/com/wisesoft/wiseface/: MainActivity.java
FaceRecognition/app/src/test/java/com/wisesoft/wiseface/: ExampleUnitTest.java
FaceRecognition/gradle/wrapper/: gradle-wrapper.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jiaopan/face/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/src/: cJSON.c  detector.cpp  detector.h  detface.id.h  mask_retina.id.h  native-lib.cpp  recognizer.cpp  retina.id.h
app/src/main/java/com/jiaopan/face/: FaceRecognizer.java  MainActivity.java
app/src/main/java/com/wisesoft/wiseface/: FaceRecognizer.java  MainActivity.java
app/src/test/java/com/jiaopan/face/: ExampleUnitTest.java
